[project]
name = "apex"
version = "0.1.0"
description = "Apex project for PDF processing and analysis"
authors = ["CaFeBaBe <whois@kedavra.dev>"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.9",
    "langchain-community>=0.3.8",
    "langchain-xai>=0.1.0",
    "langsmith>=0.1.147",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
